--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
 
     <div class="app-root">
-        <card-social></card-social>
+        <card-social
+        title="Gustavo Cecato">
+        </card-social>
+
         <card-header></card-header>
         <card-component></card-component>
         <card-component></card-component>
