--- a/index.html
+++ b/index.html
@@ -23,19 +23,15 @@
         </card-social>
 
         <card-header></card-header>
+
+        <card-component
+        content="AAAAAAAAA"></card-component>
+
         <card-component></card-component>
+
         <card-component></card-component>
-        <card-component></card-component>
+        
         <card-component></card-component>   
-        <card-component></card-component> 
-        <card-component></card-component> 
-        <card-component></card-component> 
-        <card-component></card-component> 
-        <card-component></card-component>   
-        <card-component></card-component> 
-        <card-component></card-component> 
-        <card-component></card-component> 
-        <card-component></card-component> 
         
     </div>
 
