--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
         <card-header></card-header>
 
         <card-component
-        content="AAAAAAAAA"></card-component>
+        content="I'm a 21 year old young professional with a strong programming background.
+        I was born and raised in Brazil and I'm finishing the Analysis and System Development
+        course at FATEC SO."></card-component>
+
+        <card-component
+        content="I have developed myself in several languages and technologies, 
+        my two favorites being TavaScript that I used for my Final Paper and Python
+        that I used in my internship and personal projects."></card-component>
 
         <card-component></card-component>
 
         <card-component></card-component>
         
-        <card-component></card-component>   
+        <card-footer></card-footer>
         
     </div>
 
