--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
         <card-component
         content="I have developed myself in several languages and technologies, 
-        my two favorites being TavaScript that I used for my Final Paper and Python
+        my two favorites being TypeScript that I used for my Final Paper and Python
         that I used in my internship and personal projects."></card-component>
 
-        <card-component></card-component>
+        <card-component
+        content="Thank you in advance for your time.
+        Please, feel free to contact me on:"></card-component>
 
-        <card-component></card-component>
         
         <card-footer></card-footer>
         
