--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <card-component
         content="Thank you in advance for your time.
-        Please, feel free to contact me on:"></card-component>
+        Please, feel free to contact me on: gustavo.cecato.email@gmail.com"></card-component>
 
         
         <card-footer></card-footer>
